--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-dropdown-picker": "^3.8.0",
     "react-native-elements": "^3.1.0",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-vector-icons": "^8.0.0"
