--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^10.6.4",
+    "@react-native-firebase/auth": "^10.8.0",
+    "@react-native-firebase/database": "^10.6.4",
+    "@react-native-firebase/storage": "^10.8.0",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-appearance": "^0.3.4",
     "react-native-dropdown-picker": "^3.8.0",
     "react-native-elements": "^3.1.0",
+    "react-native-gesture-handler": "^1.10.1",
     "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-swiper-flatlist": "^3.0.14",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
