--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "^1.10.1",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-safe-area-context": "^3.1.9",
+    "react-native-super-grid": "^4.1.1",
     "react-native-swiper-flatlist": "^3.0.14",
     "react-native-vector-icons": "^8.0.0"
   },
