--- a/ios/ZELLIT/Info.plist
+++ b/ios/ZELLIT/Info.plist
@@ -65,6 +65,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>Access camera</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Library</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
