--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "expo": "^40.0.1",
+    "expo-file-system": "^10.0.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-appearance": "^0.3.4",
@@ -31,6 +33,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-super-grid": "^4.1.1",
     "react-native-swiper-flatlist": "^3.0.14",
+    "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
