--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,33 +1,35 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
+#require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
+install! 'cocoapods', :deterministic_uuids => false
 
-platform :ios, '11.0'
+# Uncomment the next line to define a global platform for your project
+ platform :ios, '11.0'
 
 target 'ZELLIT' do
-  use_unimodules!
-  config = use_native_modules!
+  # Comment the next line if you don't want to use dynamic frameworks
+  #use_unimodules!
+    config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+    use_react_native!(:path => config["reactNativePath"])
+
+  # Pods for ZELLIT
 
   target 'ZELLITTests' do
     inherit! :complete
     # Pods for testing
   end
-
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper! ({ 'Flipper-Folly' => '2.3.0' })
-  post_install do |installer|
-    flipper_post_install(installer)
-    installer.pods_project.targets.each do |target|
-        target.build_configurations.each do |config|
-          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+   use_flipper!()
+    post_install do |installer|
+        react_native_post_install(installer)
+      #flipper_post_install(installer)
+      installer.pods_project.targets.each do |target|
+          target.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+          end
         end
-      end
-  end
+    end
+
 end
 
 target 'ZELLIT-tvOS' do
