--- a/package.json
+++ b/package.json
@@ -11,40 +11,42 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-firebase/app": "^10.6.4",
-    "@react-native-firebase/auth": "^10.8.0",
-    "@react-native-firebase/database": "^10.6.4",
-    "@react-native-firebase/storage": "^10.8.0",
-    "@react-navigation/bottom-tabs": "^5.11.7",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
-    "expo": "^40.0.1",
+    "@react-native-firebase/app": "^11.0.0",
+    "@react-native-firebase/auth": "^11.0.0",
+    "@react-native-firebase/database": "^11.0.0",
+    "@react-native-firebase/storage": "^11.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/core": "^5.15.2",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo-file-system": "^10.0.0",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
     "react-native-appearance": "^0.3.4",
-    "react-native-dropdown-picker": "^3.8.0",
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.10.1",
+    "react-native-dropdown-picker": "^4.0.2",
+    "react-native-elements": "^3.3.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-picker": "^3.2.1",
     "react-native-image-resizer": "^1.4.3",
     "react-native-neomorph-shadows": "^1.1.2",
-    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-super-grid": "^4.1.1",
     "react-native-swiper-flatlist": "^3.0.14",
     "react-native-unimodules": "^0.12.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.1.0",
+    "shorthash2": "^1.0.3"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/runtime": "7.12.5",
-    "@react-native-community/eslint-config": "1.1.0",
-    "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
-    "jest": "25.5.4",
-    "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+    "@babel/core": "7.13.10",
+    "@babel/runtime": "7.13.10",
+    "@react-native-community/eslint-config": "2.0.0",
+    "babel-jest": "26.6.3",
+    "eslint": "7.22.0",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.65.2",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
