--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,7 +19,7 @@ target 'ZELLIT' do
     inherit! :complete
     # Pods for testing
   end
-  use_flipper!({ 'Flipper-Folly' => '2.3.0', 'Flipper-RSocket'=>'1.1' })
+  use_flipper!({ 'Flipper-Folly' => '2.3.0'})
     post_install do |installer|
         #react_native_post_install(installer)
      flipper_post_install(installer)
