--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.0.0",
     "@react-native-firebase/auth": "^11.0.0",
     "@react-native-firebase/database": "^11.0.0",
@@ -21,7 +22,7 @@
     "@react-navigation/stack": "^5.14.3",
     "expo-file-system": "^10.0.0",
     "react": "17.0.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.63.4",
     "react-native-appearance": "^0.3.4",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.3.1",
@@ -31,10 +32,12 @@
     "react-native-image-picker": "^3.2.1",
     "react-native-image-resizer": "^1.4.3",
     "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
     "react-native-super-grid": "^4.1.1",
     "react-native-swiper-flatlist": "^3.0.14",
-    "react-native-unimodules": "^0.12.0",
+    "react-native-unimodules": "^0.13.0",
     "react-native-vector-icons": "^8.1.0",
     "shorthash2": "^1.0.3"
   },
