--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --verbose --simulator='iPhone 12 Pro' ",
+    "ios": "react-native run-ios --verbose --simulator='iPhone 11 Pro' ",
     "start": "react-native start --verbose",
     "pod-ios": "cd ios; pod install; cd ..; react-native run-ios ",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "react-native-ratings": "7.5.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.0.0",
     "@react-native-firebase/auth": "^11.0.0",
@@ -26,6 +27,7 @@
     "react-native-appearance": "^0.3.4",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.3.1",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
