--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "expo-file-system": "^10.0.0",
     "react": "17.0.1",
     "react-native": "^0.63.4",
+    "react-native-image-modal": "^2.0.3",
     "react-native-appearance": "^0.3.4",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.3.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^11.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-picker": "^3.2.1",
